Proyecto - Correciones en el patron de solicitud accion