@@ -1,56 +1,70 @@
 package eci.edu.dows.profesorSuperO.service;
 
 
+import eci.edu.dows.profesorSuperO.Util.Exceptions.NotFoundException;
+import eci.edu.dows.profesorSuperO.Util.FacultadMapper;
+import eci.edu.dows.profesorSuperO.Util.SolicitudMapper;
+import eci.edu.dows.profesorSuperO.model.DTOS.FacultadDTO;
+import eci.edu.dows.profesorSuperO.model.DTOS.SolicitudesDTO.SolicitudDTO;
 import eci.edu.dows.profesorSuperO.model.Enums.EstadoSolicitud;
 import eci.edu.dows.profesorSuperO.model.Facultad;
 import eci.edu.dows.profesorSuperO.model.Solicitud;
 import eci.edu.dows.profesorSuperO.repository.SolicitudRepository;
 import eci.edu.dows.profesorSuperO.service.Acciones.AccionSolicitudCommand;
-import eci.edu.dows.profesorSuperO.service.Acciones.AceptarSolicitud;
-import eci.edu.dows.profesorSuperO.service.Acciones.DeclinarSolicitud;
+import eci.edu.dows.profesorSuperO.service.Acciones.AccionSolicitudFactory;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class DecanaturaService {
     private final SolicitudRepository solicitudRepository;
-    private final AceptarSolicitud aceptarSolicitud;
-    private final DeclinarSolicitud rechazarSolicitud;
+    private final AccionSolicitudFactory accionSolicitudFactory;
+    private final SolicitudMapper solicitudMapper;
+    private final FacultadMapper facultadMapper;
+
 
     public DecanaturaService(SolicitudRepository solicitudRepository,
-                             AceptarSolicitud aceptarSolicitud,
-                             DeclinarSolicitud rechazarSolicitud) {
+                             AccionSolicitudFactory accionSolicitudFactory,
+                             SolicitudMapper solicitudMapper,
+                             FacultadMapper facultadMapper) {
         this.solicitudRepository = solicitudRepository;
-        this.aceptarSolicitud = aceptarSolicitud;
-        this.rechazarSolicitud = rechazarSolicitud;
-    }
-
-    public List<Solicitud> obtenerSolicitudesPorFacultad(Facultad facultad) {
-        return solicitudRepository.findByFacultad(facultad);
-    }
-
-    public Solicitud cambiarEstado(String solicitudId, AccionSolicitudCommand accion) {
-        Optional<Solicitud> solicitudOpt = solicitudRepository.findById(solicitudId);
-        if (solicitudOpt.isPresent()) {
-            Solicitud solicitud = solicitudOpt.get();
-            accion.accionSolicitud(solicitud);
-            return solicitudRepository.save(solicitud);
-        } else {
-            throw new RuntimeException("Solicitud no encontrada con ID: " + solicitudId);
-        }
+        this.accionSolicitudFactory = accionSolicitudFactory;
+        this.solicitudMapper = solicitudMapper;
+        this.facultadMapper = facultadMapper;
     }
 
 
-    public List<Solicitud> obtenerSolicitudesPorPrioridad(int prioridad) {
-        return solicitudRepository.findByPrioridad(prioridad);
+
+    public SolicitudDTO cambiarEstado(String solicitudId, String accion) {
+        Solicitud solicitud = solicitudRepository.findById(solicitudId)
+                .orElseThrow(() -> new NotFoundException("Solicitud no encontrada"));
+
+        AccionSolicitudCommand comando = accionSolicitudFactory.obtenerComando(accion);
+        comando.accionSolicitud(solicitud);
+
+        return solicitudMapper.toDTO(solicitudRepository.save(solicitud));
     }
 
-    public List<Solicitud> obtenerSolicitudesPendientes(Facultad facultad) {
-        List<Solicitud> todas = solicitudRepository.findByFacultad(facultad);
-        return todas.stream()
-                .filter(s -> s.getEstado() == EstadoSolicitud.PENDIENTE)
-                .toList();
+    public List<SolicitudDTO> obtenerSolicitudesPorFacultad(FacultadDTO facultadDTO) {
+        Facultad facultad = facultadMapper.toFacultad(facultadDTO);
+        List<Solicitud> requestsList = solicitudRepository.findByFacultad(facultad);
+
+        return requestsList.stream().map(solicitudMapper::toDTO).collect(Collectors.toList());
+    }
+
+
+    public List<SolicitudDTO> obtenerSolicitudesPorPrioridad(int prioridad) {
+        List<Solicitud> s =  solicitudRepository.findByPrioridad(prioridad);
+        return s.stream().map(solicitudMapper::toDTO).collect(Collectors.toList());
+    }
+
+    public List<SolicitudDTO> obtenerSolicitudesPendientes(FacultadDTO facultadDTO) {
+        Facultad facultad = facultadMapper.toFacultad(facultadDTO);
+        List<Solicitud> requestsList = solicitudRepository.findByFacultad(facultad);
+
+        return requestsList.stream().
+                filter(s->s.getEstado() == EstadoSolicitud.PENDIENTE).
+                map(solicitudMapper::toDTO).collect(Collectors.toList());
     }
 }
